--- a/inventory/aws_ec2.yaml
+++ b/inventory/aws_ec2.yaml
@@ -1,10 +1,10 @@
 plugin: aws_ec2
 
-#aws_access_key: 
-#aws_secret_key: 
+aws_access_key: AKIA6PVREJYHONMXU423 
+aws_secret_key: 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 
 
 regions:
-  - ap-southeast-1
+  - ap-south-1
 
 filters:
   instance-state-name : running
